--- a/src/main/resources/static/web/login.html
+++ b/src/main/resources/static/web/login.html
@@ -143,5 +143,17 @@
 			</div>
 		</footer>
 		<!--页脚结束-->
+
+	<script>
+		$("#btn-login").click(function (){
+			$.post("/users/login",$("#form-login").serialize(),function(data){
+				if (data.state == 200){
+					location.href = "index.html";
+				}else{
+					alert(data.message);
+				}
+			});
+		});
+	</script>
 	</body>
 </html>
