--- a/src/main/resources/static/web/userdata.html
+++ b/src/main/resources/static/web/userdata.html
@@ -147,7 +147,7 @@
 							<div class="form-group">
 								<label class="col-md-2 control-label">电话号码：</label>
 								<div class="col-md-8">
-									<input `id="phone" name="phone" type="text" class="form-control" placeholder="请输入电话号码" value="13311311313">
+									<input id="phone" name="phone" type="text" class="form-control" placeholder="请输入电话号码" value="13311311313">
 								</div>
 							</div>
 							<div class="form-group">
@@ -262,6 +262,14 @@
 			</div>
 		</footer>
 		<!--页脚结束-->
+
+	<script>
+		$.get("/users/get_user_info",function (result){
+			$("#username").val(result.data.username);
+			$("#phone").val(result.data.phone);
+			$("#email").val(result.data.email);
+		});
+	</script>
 	</body>
 
 </html>
