--- a/src/main/resources/static/web/password.html
+++ b/src/main/resources/static/web/password.html
@@ -136,7 +136,7 @@
 					</ul>
 					<div class="panel-body">
 						<!--修改密码表单开始-->
-						<form id="form-change-password" class="form-horizontal" role="form">
+						<form id="form-change-password" class="form-horizontal" role="form" method="post">
 							<div class="form-group">
 								<label class="col-md-2 control-label">原密码：</label>
 								<div class="col-md-8">
@@ -157,7 +157,7 @@
 							</div>
 							<div class="form-group">
 								<div class="col-sm-offset-2 col-sm-10">
-									<input id="btn-change-password" type="button" class="btn btn-primary" value="修改" />
+									<input id="btn-change-password" type="submit" class="btn btn-primary" value="修改" />
 								</div>
 							</div>
 						</form>
@@ -250,6 +250,18 @@
 			</div>
 		</footer>
 		<!--页脚结束-->
+	<script>
+		$("#btn-change-password").click(function (){
+			$.post("/users/change_password",$("#form-change-password").serialize(),function(data){
+				if (data.state == 200){
+					alert("修改成功");
+					location.href = "index.html"
+				}else{
+					alert("修改密码时出现了" + data.message + "的异常");
+				}
+			});
+		});
+	</script>
 	</body>
 
 </html>
