--- a/src/main/resources/static/web/userdata.html
+++ b/src/main/resources/static/web/userdata.html
@@ -264,12 +264,35 @@
 		<!--页脚结束-->
 
 	<script>
-		$.get("/users/get_user_info",function (result){
-			$("#username").val(result.data.username);
-			$("#phone").val(result.data.phone);
-			$("#email").val(result.data.email);
+		$(function (){
+			$("#btn-change-info").click(function (){
+				$.post("/users/change_info",$("#form-change-info").serialize(),function(json){
+					if (json.state == 200){
+						alert("修改成功")
+						location.href = "userdata.html";
+					}else {
+						alert("修改时放生了异常");
+					}
+				});
+			});
+			$.get("/users/get_user_info",function (result){
+				if (result.state == 200){
+					$("#username").val(result.data.username);
+					$("#phone").val(result.data.phone);
+					$("#email").val(result.data.email);
+					let radio = result.data.gender == 0 ? $("#gender-female") : $("#gender-male");
+					radio.prop("checked","checked");
+				}else{
+					alert("用户数据不存在");
+				}
+			});
+
+
 		});
 	</script>
+
+
+
 	</body>
 
 </html>
