--- a/src/main/resources/static/web/login.html
+++ b/src/main/resources/static/web/login.html
@@ -146,11 +146,14 @@
 
 	<script>
 		$("#btn-login").click(function (){
-			$.post("/users/login",$("#form-login").serialize(),function(data){
-				if (data.state == 200){
+			$.post("/users/login",$("#form-login").serialize(),function(json){
+				if (json.state == 200){
+					// 将服务器返回的头像设置到Cookie中
+					$.cookie("avatar",json.data.avatar, {expires: 7});
 					location.href = "index.html";
+
 				}else{
-					alert(data.message);
+					alert(json.message);
 				}
 			});
 		});
