--- a/src/main/resources/static/web/addAddress.html
+++ b/src/main/resources/static/web/addAddress.html
@@ -287,6 +287,18 @@
 			</div>
 		</footer>
 		<!--页脚结束-->
+
+	<script>
+		$("#btn-add-new-address").click(function (){
+			$.post("/addresses/add_new_address",$("#form-add-new-address").serialize(),function (json){
+				if (json.state == 200){
+					alert("新增收货地址成功");
+				}else{
+					alert("新增地址失败");
+				}
+			})
+		});
+	</script>
 	</body>
 
 </html>
