--- a/src/main/resources/static/web/address.html
+++ b/src/main/resources/static/web/address.html
@@ -269,6 +269,113 @@
 			</div>
 		</footer>
 		<!--页脚结束-->
+		<script>
+
+		$(document).ready(function () {
+		showAddressList();
+		});
+
+		function showAddressList() {
+		$("#address-list").empty();
+		$.ajax({
+		url: "/addresses",
+		type: "GET",
+		dataType: "JSON",
+		success: function (json) {
+		let list = json.data;
+		for (let i = 0; i < list.length; i++) {
+		let address = '<tr>'
+			+ '<td>#{tag}</td>'
+			+ '<td>#{name}</td>'
+			+ '<td>#{province}#{city}#{area}#{address}</td>'
+			+ '<td>#{phone}</td>'
+			+ '<td><a class="btn btn-xs btn-info"><span class="fa fa-edit"></span> 修改</a></td>'
+			+ '<td><a class="btn btn-xs add-del btn-info" onclick="deleteByAid(#{aid})"><span class="fa fa-trash-o"></span> 删除</a></td>'
+			+ '<td><a class="btn btn-xs add-def btn-default" onclick="setDefault(#{aid})">设为默认</a></td>'
+			+ '</tr>';
+
+		address = address.replace(/#{aid}/g, list[i].aid);
+		address = address.replace(/#{tag}/g, list[i].tag);
+		address = address.replace("#{name}", list[i].name);
+		address = address.replace("#{province}", list[i].provinceName);
+		address = address.replace("#{city}", list[i].cityName);
+		address = address.replace("#{area}", list[i].areaName);
+		address = address.replace("#{address}", list[i].address);
+		address = address.replace("#{phone}", list[i].phone);
+		address = address.replace("#{aid}", list[i].aid);
+
+
+		$("#address-list").append(address);
+		}
+		$(".add-def:eq(0)").hide();
+		}
+		});
+		}
+
+		function setDefault(aid){
+			$.get("/addresses/"+aid+"/set_default",function(json){
+				if (json.state == 200){
+					// 重新加载收货地址列表
+					showAddressList();
+				}else{
+					alert("设置默认收货地址失败")
+				}
+			});
+		}
+
+		function deleteByAid(aid){
+			$.post("/addresses/"+aid+"/delete",function(json){
+				if (json.state == 200){
+					// 重新加载收货地址列表
+					showAddressList();
+				}else{
+					alert("删除收货地址失败")
+				}
+			});
+		}
+//
+
+		// $(function(){
+		// 	$.get("/addresses/",function(json){
+		// 		let lis = '';
+		// 		for (let i = 0; i < json.data.length; i++) {
+		// 			let address = json.data[i];
+		// 			let li = '<tr>\n' +
+		// 					'\t\t\t\t\t\t\t\t\t<td>'+address.tag+'</td>\n' +
+		// 					'\t\t\t\t\t\t\t\t\t<td>'+address.name+'</td>\n' +
+		// 					'\t\t\t\t\t\t\t\t\t<td>'+address.address+'</td>\n' +
+		// 					'\t\t\t\t\t\t\t\t\t<td>'+address.phone+'</td>\n' +
+		// 					'\t\t\t\t\t\t\t\t\t<td><a class="btn btn-xs btn-info"><span class="fa fa-edit"></span> 修改</a></td>\n' +
+		// 					'\t\t\t\t\t\t\t\t\t<td><a class="btn btn-xs add-del btn-info"  onclick="deleteByAid('+address.aid+')"><span class="fa fa-trash-o"></span> 删除</a></td>\n' +
+		// 					'\t\t\t\t\t\t\t\t\t<td><a class="btn btn-xs add-def btn-default" onclick="setDefault('+address.aid+')">设为默认</a></td>\n' +
+		// 					'\t\t\t\t\t\t\t\t</tr>'
+		// 			lis += li;
+		// 		}
+		// 		$("#address-list").html(lis);
+		// 	});
+		// });
+		//
+		// function setDefault(aid){
+		// 	$.get("/addresses/" +aid+"/set_default",{aid:aid},function (json){
+		// 		if (json.state == 200){
+		// 			alert("默认收货地址设置成功");
+		// 			location.href = "address.html"
+		// 		}else{
+		// 			alert("默认收货地址设置失败");
+		// 		}
+		// 	})
+		// }
+		// function deleteByAid(aid){
+		// 	$.post("/addresses/" +aid+"/delete",{aid:aid},function (json){
+		// 		if (json.state == 200){
+		// 			alert("删除成功");
+		// 			location.href = "address.html"
+		// 		}else{
+		// 			alert("删除失败");
+		// 		}
+		// 	})
+		// }
+		</script>
 	</body>
 
 </html>
