--- a/src/main/resources/static/web/product.html
+++ b/src/main/resources/static/web/product.html
@@ -127,7 +127,7 @@
 					</div>
 				</div>
 				<div class="col-md-6">
-					<h3 id="product-title" class="col-md-12 title-row-1">戴尔Dell 燃700R1605银色</h3>
+					<h3 id="product-title"  class="col-md-12 title-row-1">戴尔Dell 燃700R1605银色</h3>
 					<p id="product-sell-point" class="col-md-12 text-row-1"><small>仅上海，广州，沈阳仓有货！预购从速！</small></p>
 					<div class="col-md-12 price-bar">
 						<small>学员售价：</small> ¥<span id="product-price">4899.00</span>
@@ -296,6 +296,39 @@
 		</footer>
 		<!--页脚结束-->
 		<script type="text/javascript" src="../js/jquery-getUrlParam.js"></script>
+		<script>
+			let pid = $.getUrlParam("id");
+			$(function (){
+				$.get("/products/details",{id:pid},function (json){
+					if (json.state == 200){
+						$("#product-title").html(json.data.title);
+						$("#product-sell-point").html(json.data.sellPoint);
+						$("#product-price").html(json.data.price);
+						for (let i = 1; i <= 5; i++) {
+							$("#product-image-" + i + "-big").attr("src", ".." + json.data.image + i + "_big.png");
+							$("#product-image-" + i).attr("src", ".." + json.data.image + i + ".jpg");
+						}
+					}else if (json.state == 4006){
+						alert("获取商品信息失败！" + json.message);
+						location.href = "index.html";
+					}
+				});
+			});
+
+
+			$("#btn-add-to-cart").click(function(){
+
+				$.get("/carts/add_to_cart",{pid:pid,amount:$("#num").val()},function (json){
+					if (json.state == 200){
+						alert("加入购物车成功");
+					}else{
+						alert("加入购物车失败");
+					}
+				})
+			});
+
+		</script>
+
 	</body>
 
 </html>
